--- a/ack/index.html
+++ b/ack/index.html
@@ -1,7 +1,7 @@
 ---
 layout: child
 title: Acknowledgements
-description: A list of tools and resources used in the making of reticivis.net.
+description: A list of tools and resources used in the making of machineonamission.me.
 ---
 
 <ul class="mb-0 text-start">
