--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
-title: Rēticīvis
-description: Rēticīvis - Citizen of the Internet
+title: Machine on a Mission
+description: I'm a Machine on a Mission!
 layout: base
 head: |
     <script type="importmap">
@@ -16,7 +16,7 @@ head: |
 <noscript>
     <div class="text-center mb-4">
         <div class="glass d-inline-block text-center px-4 py-2">
-            <h4 class="mb-0 text-warning">I've detected you don't have JavaScript. reticivis.net was designed to
+            <h4 class="mb-0 text-warning">I've detected you don't have JavaScript. machineonamission.me was designed to
                 work without JS, but you'll
                 be missing some features.</h4>
         </div>
@@ -29,7 +29,7 @@ head: |
         <h1><span class="textemphasis">
                 <span class="sparkle">✨</span>Melody!<span class="sparkle">✨</span>
             </span></h1>
-        <h2>Also known professionally as <b>Rēticīvis</b>.</h2>
+        <h2>And <a href="https://youtube.com/clip/UgkxYlVq0o7Ku2XtPGDA-6AnKB9laHotQymM" class="cool-link">I'm a <b>Machine on a Mission!</b></a></h2>
     </div>
 </div>
 <div class="grid-container">
