me want new font :)

--- a/ack/index.html
+++ b/ack/index.html
@@ -3,12 +3,11 @@ layout: child
 title: Acknowledgements
 description: A list of tools and resources used in the making of machineonamission.me.
 ---
-
+<p class="pfix">This website has been made possible by:</p>
 <ul class="mb-0 text-start">
     <li><a href="https://getbootstrap.com/">Bootstrap</a></li>
     <li><a href="https://fontawesome.com/">Font Awesome</a></li>
     <li><a href="https://threejs.org/">Three.js</a></li>
-    <li><a href="https://webbtelescope.org/contents/media/images/2022/035/01G7DCWB7137MYJ05CSH1Q5Z1Z">Webb's First Deep Field</a></li>
     <li><a href="https://www.jetbrains.com/lp/mono/">JetBrains Mono</a></li>
     <li><a href="https://brailleinstitute.org/freefont">Atkinson Hyperlegible</a></li>
     <li><a href="https://pages.github.com/">GitHub Pages</a></li>
