been meaning to do this for ages

--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@ prepend: |
 <noscript>
     <div class="text-center mb-4">
         <div class="glass d-inline-block text-center px-4 py-2">
-            <p class="mb-0 text-warning">I've detected you don't have JavaScript. machineonamission.me was designed to
+            <p class="mb-0 text-warning">
+                I've detected you don't have JavaScript. machineonamission.me was designed to
                 work without JS, but you'll
-                be missing some features.</p>
+                be missing some features.
+            </p>
         </div>
     </div>
 </noscript>
@@ -33,7 +35,9 @@ prepend: |
         <h1><span class="textemphasis">
                 <span class="sparkle">✨</span>Melody!<span class="sparkle">✨</span>
             </span></h1>
-        <h2>And <a href="https://youtube.com/clip/UgkxYlVq0o7Ku2XtPGDA-6AnKB9laHotQymM" class="cool-link">I'm a <b>Machine on a Mission!</b></a></h2>
+        <h2>And <a href="https://youtube.com/clip/UgkxYlVq0o7Ku2XtPGDA-6AnKB9laHotQymM" class="cool-link">
+            I'm a <b>Machine on a Mission!</b></a>
+        </h2>
     </div>
 </div>
 <div class="grid-container">
